mesh/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ourcoolnamespace
spec:
  mtls:
    mode: PERMISSIVE
